--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React app from scratch",
   "main": "index.js",
   "scripts": {
+    "start": "npx webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11"
   }
 }
